src/objects/Asset_And_Liability__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Asset And Liabilities</relationshipLabel>
        <relationshipName>Asset_And_Liabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Account__r.PersonContact.acfWhat_is_your_postcode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSB__c</fullName>
        <label>BSB</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clearing_From_This_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clearing From This Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Record</label>
        <referenceTo>Asset_And_Liability__c</referenceTo>
        <relationshipLabel>Asset And Liabilities</relationshipLabel>
        <relationshipName>Asset_And_Liabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Type__c</fullName>
        <label>Credit Card Type</label>
        <picklist>
            <picklistValues>
                <fullName>Amex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mastercard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Creditor__c</fullName>
        <label>Creditor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Balance__c</fullName>
        <label>Current Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desciption__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Evidence_of_Tenancy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evidence of Tenancy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <formula>TEXT(Rental_Income__r.Frequency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_Amount__c</fullName>
        <formula>Rental_Income__r.Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <label>Institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lendi_Application_uuid__c</fullName>
        <formula>Opportunity__r.Lendi_Application_uuid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lendi Application uuid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lendi_Application_uuid_delete__c</fullName>
        <label>Lendi_Application_uuid_delete</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lendi_User_uuid__c</fullName>
        <label>Lendi User uuid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limit__c</fullName>
        <label>Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Asset_And_Liabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Purpose__c</fullName>
        <label>Primary Purpose</label>
        <picklist>
            <picklistValues>
                <fullName>Owner Occupied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rental_Income__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rental Income</label>
        <referenceTo>Income_And_Expense__c</referenceTo>
        <relationshipName>Asset_And_Liabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Repayment_Frequency__c</fullName>
        <label>Repayment Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortnightly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Repayments__c</fullName>
        <label>Repayments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RpdataApicalled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RpdataApicalled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>NSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <label>Street Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Number__c</fullName>
        <label>Street Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Type__c</fullName>
        <label>Street Type</label>
        <picklist>
            <picklistValues>
                <fullName>Street</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arcade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boulevard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bypass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Circuit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crescent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cul-de-sac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Esplanade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grove</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Highway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Square</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terrace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>To_Be_Purchased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To Be Purchased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Asset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liability</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Used_as_Security__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used as Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value_Basis__c</fullName>
        <label>Value Basis</label>
        <picklist>
            <picklistValues>
                <fullName>Applicant Estimate</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Certified Valuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actual Value</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vehicle_Make__c</fullName>
        <label>Vehicle Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Type__c</fullName>
        <label>Vehicle Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bike</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luxury Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4WD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle_Year__c</fullName>
        <label>Vehicle Year</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zoning__c</fullName>
        <label>Zoning</label>
        <picklist>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rural</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>acfRecordid__c</fullName>
        <label>Recordid</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_create_from_custom_clone_button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create from custom clone button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lendi_asset_and_liablity_uuid__c</fullName>
        <externalId>true</externalId>
        <label>Lendi asset and liablity uuid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Asset And Liability</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Opportunity__c</columns>
        <columns>Value__c</columns>
        <columns>Value_Basis__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Address__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Asset_And_Liability__c.Asset_Real_Estate</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Last_modif_by_Lendi_API</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Account__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UPDATEDBY_USER</field>
            <operation>equals</operation>
            <value>Lendi API</value>
        </filters>
        <label>Last modif by Lendi API</label>
        <sharedTo>
            <role>Executive_Team</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Last_modif_by_Lendi_API_Sarah_Moore</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Account__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>moore</value>
        </filters>
        <filters>
            <field>UPDATEDBY_USER</field>
            <operation>equals</operation>
            <value>Lendi API</value>
        </filters>
        <label>Last modif by Lendi API Sarah Moore</label>
        <sharedTo>
            <role>Executive_Team</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Asset And Liabilities Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset And Liabilities</pluralLabel>
    <recordTypes>
        <fullName>Asset_Boat</fullName>
        <active>true</active>
        <label>Asset Boat</label>
    </recordTypes>
    <recordTypes>
        <fullName>Asset_Business_Equity</fullName>
        <active>true</active>
        <label>Asset Business Equity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Asset_Cash_Management</fullName>
        <active>true</active>
        <label>Asset Cash Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>Asset_Charge_Over_Cash</fullName>
        <active>true</active>
        <label>Asset Charge Over Cash</label>
    </recordTypes>
    <recordTypes>
        <fullName>Asset_Cheque_Account</fullName>
        <active>true</active>
        <label>Asset Cheque Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Asset_Debenture_Charge</fullName>
        <active>true</active>
        <label>Asset Debenture Charge</label>
    </recordTypes>
    <recordTypes>
        <fullName>Asset_Gifts</fullName>
        <active>true</active>
        <label>Asset Gifts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Asset_Guarantee</fullName>
        <active>true</active>
        <label>Asset Guarantee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Asset_Home_Contents</fullName>
        <active>true</active>
        <label>Asset Home Contents</label>
    </recordTypes>
    <recordTypes>
        <fullName>Asset_Investment_Savings</fullName>
        <active>true</active>
        <label>Asset Investment Savings</label>
    </recordTypes>
    <recordTypes>
        <fullName>Asset_Life_Insurance</fullName>
        <active>true</active>
        <label>Asset Life Insurance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Asset_Managed_Funds</fullName>
        <active>true</active>
        <label>Asset Managed Funds</label>
    </recordTypes>
    <recordTypes>
        <fullName>Asset_Motor_Vehicle</fullName>
        <active>true</active>
        <label>Asset Motor Vehicle</label>
    </recordTypes>
    <recordTypes>
        <fullName>Asset_Other</fullName>
        <active>true</active>
        <label>Asset Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Asset_Real_Estate</fullName>
        <active>true</active>
        <label>Asset Real Estate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Asset_Savings_Account</fullName>
        <active>true</active>
        <label>Asset Savings Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Asset_Shares</fullName>
        <active>true</active>
        <label>Asset Shares</label>
    </recordTypes>
    <recordTypes>
        <fullName>Asset_Superannuation</fullName>
        <active>true</active>
        <label>Asset Superannuation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Asset_Term_Deposit</fullName>
        <active>true</active>
        <label>Asset Term Deposit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Liability_Commercial_Bill</fullName>
        <active>true</active>
        <label>Liability Commercial Bill</label>
    </recordTypes>
    <recordTypes>
        <fullName>Liability_Credit_Card</fullName>
        <active>true</active>
        <label>Liability Credit Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>Liability_HECS</fullName>
        <active>true</active>
        <label>Liability HECS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Liability_Hire_Purchase</fullName>
        <active>true</active>
        <label>Liability Hire Purchase</label>
    </recordTypes>
    <recordTypes>
        <fullName>Liability_Lease</fullName>
        <active>true</active>
        <label>Liability Lease</label>
    </recordTypes>
    <recordTypes>
        <fullName>Liability_Line_Of_Credit</fullName>
        <active>true</active>
        <label>Liability Line Of Credit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Liability_Loan_As_Guarantor</fullName>
        <active>true</active>
        <label>Liability Loan As Guarantor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Liability_Maintenance</fullName>
        <active>true</active>
        <label>Liability Maintenance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Liability_Mortgage_Loan</fullName>
        <active>true</active>
        <label>Liability Mortgage Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Liability_Other</fullName>
        <active>true</active>
        <label>Liability Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Liability_Other_Loan</fullName>
        <active>true</active>
        <label>Liability Other Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Liability_Outstanding_Taxation</fullName>
        <active>true</active>
        <label>Liability Outstanding Taxation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Liability_Overdraft</fullName>
        <active>true</active>
        <label>Liability Overdraft</label>
    </recordTypes>
    <recordTypes>
        <fullName>Liability_Personal_Loan</fullName>
        <active>true</active>
        <label>Liability Personal Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Liability_Store_Card</fullName>
        <active>true</active>
        <label>Liability Store Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>Liability_Term_Loan</fullName>
        <active>true</active>
        <label>Liability Term Loan</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>